rt.tf
# route tables

# Public Route Table
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.web-vpc.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.public_internet_gateway.id
  }
  tags = {
    Name = "public-rt"
  }
}

# Public Route Table and Public Subnet Association
resource "aws_route_table_association" "public_rt_subnet_association" {
  subnet_id      = "{aws_subnet.public_subnet1.id,aws_subnet.public_subnet2.id}"
  route_table_id = aws_route_table.public_route_table.id
}


# Private Route Table
resource "aws_route_table" "private_route_table" {
  vpc_id     = aws_vpc.web-vpc.id
  depends_on = [aws_nat_gateway.nat_gateway]
  tags = {
    Name = "private-rt"
  }
}

# Private Route Table and private Subnet Association
resource "aws_route_table_association" "private_rt_subnet_association" {
  subnet_id      = "{aws_subnet.private_subnet1.id,aws_subnet.private_subnet2.id}"
  route_table_id = aws_route_table.private_route_table.id
}
